--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,7 +6,7 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.zyc_summarize.demo.activity.SplashActivity">
+        tools:context=".view.activity.SplashActivity">
 
     </android.support.constraint.ConstraintLayout>
 
