--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -8,6 +8,12 @@
         android:layout_height="match_parent"
         tools:context=".view.activity.SplashActivity">
 
+        <Button
+            android:id="@+id/btn"
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="关闭"/>
     </android.support.constraint.ConstraintLayout>
 
 </layout>
