--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.zyc_summarize.demo.viewModel.LoginViewModel" />
+            type="com.app.entrance.viewModel.LoginViewModel" />
 
     </data>
 
