--- a/app/src/main/res/layout/activity_forget_pws.xml
+++ b/app/src/main/res/layout/activity_forget_pws.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.zyc_summarize.demo.viewModel.ForgetPwsViewModel" />
+            type="com.app.entrance.viewModel.ForgetPwsViewModel" />
 
     </data>
 
