--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,6 +16,114 @@
         android:layout_height="match_parent"
         tools:context=".view.activity.LoginActivity">
 
+        <ImageView
+            android:id="@+id/iv_logo"
+            android:layout_width="180dp"
+            android:layout_height="120dp"
+            android:layout_marginTop="40dp"
+            android:src="@drawable/ic_launcher_background"
+            binding:layout_constraintEnd_toEndOf="parent"
+            binding:layout_constraintStart_toStartOf="parent"
+            binding:layout_constraintTop_toTopOf="parent"
+            tools:ignore="ContentDescription" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="34dp"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:padding="16sp"
+            binding:layout_constraintBottom_toBottomOf="parent"
+            binding:layout_constraintEnd_toEndOf="parent"
+            binding:layout_constraintStart_toStartOf="parent"
+            binding:layout_constraintTop_toTopOf="parent"
+            binding:layout_constraintVertical_bias="0.4">
+
+            <ImageView
+                android:layout_width="22dp"
+                android:layout_height="22dp" />
+
+            <View
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp" />
+
+            <EditText
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@null"
+                android:hint="请输入用户名"
+                android:text="@={viewModel.userName}"
+                android:textSize="16sp"
+                binding:onFocusChangeCommand="@{viewModel.onFocusChangeCommand}" />
+
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:padding="6dp"
+                android:visibility="@{viewModel.clearBtnVisibility}"
+                binding:onClickCommand="@{viewModel.clearUserNameOnClickCommand}" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:padding="16sp"
+            binding:layout_constraintBottom_toBottomOf="parent"
+            binding:layout_constraintEnd_toEndOf="parent"
+            binding:layout_constraintStart_toStartOf="parent"
+            binding:layout_constraintTop_toTopOf="parent"
+            binding:layout_constraintVertical_bias="0.6">
+
+            <ImageView
+                android:layout_width="22dp"
+                android:layout_height="22dp" />
+
+            <View
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp" />
+
+            <EditText
+                android:id="@+id/et_password"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@null"
+                android:hint="请输入密码"
+                android:inputType="textPassword"
+                android:text="@={viewModel.password}"
+                android:textSize="16sp" />
+
+            <ImageView
+                android:id="@+id/iv_swich_passwrod"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:padding="6dp"
+                binding:onClickCommand="@{viewModel.passwordShowSwitchOnClickCommand}" />
+        </LinearLayout>
+
+
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="登录"
+            android:textSize="18sp"
+            binding:layout_constraintBottom_toBottomOf="parent"
+            binding:layout_constraintEnd_toEndOf="parent"
+            binding:layout_constraintStart_toStartOf="parent"
+            binding:layout_constraintTop_toTopOf="parent"
+            binding:layout_constraintVertical_bias="0.8"
+            binding:onClickCommand="@{viewModel.loginClickCommand}" />
+
     </android.support.constraint.ConstraintLayout>
 
 </layout>
