--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,6 +36,7 @@
             android:id="@+id/rl_home"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:background="@color/color_FF4D4D"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/rl_commodity"
             app:layout_constraintStart_toStartOf="parent"
@@ -48,6 +49,7 @@
             android:id="@+id/rl_commodity"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:background="@color/color_0661FF"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/rl_dynamic"
             app:layout_constraintStart_toEndOf="@id/rl_home"
@@ -60,6 +62,7 @@
             android:id="@+id/rl_dynamic"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:background="@color/color_08FF00"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/rl_mine"
             app:layout_constraintStart_toEndOf="@id/rl_commodity"
@@ -72,6 +75,7 @@
             android:id="@+id/rl_mine"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:background="@color/color_3A3A3A"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/rl_dynamic"
