--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,7 @@
 
 
     <color name="color_3A3A3A">#FF3A3A3A</color>
+    <color name="color_FF4D4D">#FFFF4D4D</color>
+    <color name="color_08FF00">#FF08FF00</color>
+    <color name="color_0661FF">#FF0661FF</color>
 </resources>
