--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -16,9 +16,16 @@
         android:layout_height="match_parent"
         tools:context=".view.activity.SplashActivity">
 
-        <Button
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginRight="5dp"
+            android:textColor="@color/color_black"
+            android:text="@{viewModel.skipNum}"
+            binding:layout_constraintEnd_toEndOf="parent"
+            binding:layout_constraintTop_toTopOf="parent"
             binding:onClickCommand="@{viewModel.skipClickCommand}" />
     </android.support.constraint.ConstraintLayout>
 
