--- a/base/src/main/res/values/colors.xml
+++ b/base/src/main/res/values/colors.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <color name="color_3A3A3A">#FF3A3A3A</color>
-
+    <color name="color_black">#FF000000</color>
+    <color name="color_white">#FFFFFFFF</color>
 </resources>
