--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@color/color_FF4D4D"
+            app:onClickCommand="@{viewModel.homeClick}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/rl_commodity"
             app:layout_constraintStart_toStartOf="parent"
@@ -50,6 +51,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@color/color_0661FF"
+            app:onClickCommand="@{viewModel.listClick}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/rl_dynamic"
             app:layout_constraintStart_toEndOf="@id/rl_home"
@@ -63,6 +65,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@color/color_08FF00"
+            app:onClickCommand="@{viewModel.carClick}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/rl_mine"
             app:layout_constraintStart_toEndOf="@id/rl_commodity"
