--- a/magic_camera/src/main/res/layout/activity_screen_test.xml
+++ b/magic_camera/src/main/res/layout/activity_screen_test.xml
@@ -16,6 +16,12 @@
         android:layout_height="match_parent"
         tools:context=".view.activity.ScreenTestActivity">
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textSize="125dp"
+            android:text="dsagdsg"/>
+
     </android.support.constraint.ConstraintLayout>
 
 </layout>
