--- a/magic_camera/src/main/res/layout/activity_screen_test.xml
+++ b/magic_camera/src/main/res/layout/activity_screen_test.xml
@@ -16,11 +16,14 @@
         android:layout_height="match_parent"
         tools:context=".view.activity.ScreenTestActivity">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textSize="125dp"
-            android:text="dsagdsg"/>
+        <TextureView
+            android:id="@+id/ttv_bg"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            binding:layout_constraintBottom_toBottomOf="parent"
+            binding:layout_constraintEnd_toEndOf="parent"
+            binding:layout_constraintStart_toStartOf="parent"
+            binding:layout_constraintTop_toTopOf="parent" />
 
     </android.support.constraint.ConstraintLayout>
 
