--- a/magic_camera/src/main/res/layout/activity_screen_test.xml
+++ b/magic_camera/src/main/res/layout/activity_screen_test.xml
@@ -16,15 +16,32 @@
         android:layout_height="match_parent"
         tools:context=".view.activity.ScreenTestActivity">
 
-        <TextureView
-            android:id="@+id/ttv_bg"
+        <com.mylibrary.magiccamera.view.view.Camera2TextureView
+            android:id="@+id/c2_texture"
             android:layout_width="0dp"
             android:layout_height="0dp"
             binding:layout_constraintBottom_toBottomOf="parent"
             binding:layout_constraintEnd_toEndOf="parent"
             binding:layout_constraintStart_toStartOf="parent"
-            binding:layout_constraintTop_toTopOf="parent" />
+            binding:layout_constraintTop_toTopOf="parent"
+            tools:ignore="NewApi" />
 
+        <ImageView
+            android:id="@+id/picture_iv"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            binding:layout_constraintBottom_toBottomOf="parent"
+            binding:layout_constraintEnd_toEndOf="parent"
+            binding:layout_constraintStart_toStartOf="parent"
+            binding:layout_constraintTop_toTopOf="parent"/>
+        <ImageView
+            android:id="@+id/p_iv"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:background="@color/color_black"
+            binding:onClickCommand="@{viewModel.cameraClick}"
+            binding:layout_constraintStart_toStartOf="parent"
+            binding:layout_constraintTop_toTopOf="parent"/>
     </android.support.constraint.ConstraintLayout>
 
 </layout>
