--- a/app/src/main/res/layout/activity_forget_pws.xml
+++ b/app/src/main/res/layout/activity_forget_pws.xml
@@ -11,11 +11,11 @@
 
     </data>
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".view.activity.ForgetPwsActivity">
 
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
