--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -11,7 +11,7 @@
 
     </data>
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".view.activity.SplashActivity">
@@ -27,6 +27,6 @@
             binding:layout_constraintEnd_toEndOf="parent"
             binding:layout_constraintTop_toTopOf="parent"
             binding:onClickCommand="@{viewModel.skipClickCommand}" />
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
