--- a/magic_camera/src/main/res/layout/activity_screen_test.xml
+++ b/magic_camera/src/main/res/layout/activity_screen_test.xml
@@ -11,7 +11,7 @@
 
     </data>
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".view.activity.ScreenTestActivity">
@@ -42,6 +42,6 @@
             binding:onClickCommand="@{viewModel.cameraClick}"
             binding:layout_constraintStart_toStartOf="parent"
             binding:layout_constraintTop_toTopOf="parent"/>
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
