--- a/shopping_mall/src/main/res/layout/activity_goods_list.xml
+++ b/shopping_mall/src/main/res/layout/activity_goods_list.xml
@@ -17,18 +17,19 @@
         tools:context=".view.activity.GoodsListActivity">
 
         <com.scwang.smartrefresh.layout.SmartRefreshLayout
-            android:id="@+id/srl_goods"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            binding:smartRefreshLoadMore='@{viewModel.onRefreshLoadMoreListener}'
             binding:layout_constraintBottom_toBottomOf="parent"
             binding:layout_constraintEnd_toEndOf="parent"
             binding:layout_constraintStart_toStartOf="parent"
             binding:layout_constraintTop_toTopOf="parent">
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_goods"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                binding:bindRvAdapter='@{viewModel.goodsListAdapter}'
+                binding:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
         </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 
