--- a/shopping_mall/src/main/res/layout/item_goods_list.xml
+++ b/shopping_mall/src/main/res/layout/item_goods_list.xml
@@ -4,6 +4,7 @@
     android:layout_height="60dp">
 
     <TextView
+        android:id="@+id/tessa"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="12512515"/>
