--- a/moments/src/main/res/layout/activity_moments_main.xml
+++ b/moments/src/main/res/layout/activity_moments_main.xml
@@ -11,29 +11,43 @@
 
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".view.activity.MomentsMainActivity">
+        android:orientation="vertical">
 
-        <com.scwang.smartrefresh.layout.SmartRefreshLayout
-            android:id="@+id/srl_content"
-            android:layout_width="0dp"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
             android:layout_height="0dp"
-            binding:smartRefreshLoadMore='@{viewModel.onRefreshLoadMoreListener}'
-            binding:layout_constraintBottom_toBottomOf="parent"
-            binding:layout_constraintEnd_toEndOf="parent"
-            binding:layout_constraintStart_toStartOf="parent"
-            binding:layout_constraintTop_toTopOf="parent">
+            android:layout_weight="1"
+            tools:context=".view.activity.MomentsMainActivity">
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                binding:bindRvAdapter='@{viewModel.goodsListAdapter}'
-                binding:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+            <com.scwang.smartrefresh.layout.SmartRefreshLayout
+                android:id="@+id/srl_content"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                binding:layout_constraintBottom_toBottomOf="parent"
+                binding:layout_constraintEnd_toEndOf="parent"
+                binding:layout_constraintStart_toStartOf="parent"
+                binding:layout_constraintTop_toTopOf="parent"
+                binding:smartRefreshLoadMore='@{viewModel.onRefreshLoadMoreListener}'>
 
-        </com.scwang.smartrefresh.layout.SmartRefreshLayout>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_moments"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    binding:bindRvAdapter='@{viewModel.goodsListAdapter}'
+                    binding:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            </com.scwang.smartrefresh.layout.SmartRefreshLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <com.mylibrary.moments.view.customs.commentwidget.CommentBox
+            android:id="@+id/widget_comment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
 
 </layout>
