--- a/game_task/src/main/res/layout/activity_main.xml
+++ b/game_task/src/main/res/layout/activity_main.xml
@@ -7,14 +7,14 @@
 
         <variable
             name="viewModel"
-            type="com.app.entrance.viewModel.MainViewModel" />
+            type="com.game_task.viewModel.MainViewModel" />
 
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".view.activity.MainActivity">
+        tools:context="com.game_task.view.activity.MainActivity">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/gl_h_9"
@@ -39,7 +39,7 @@
             android:background="@color/color_FF4D4D"
             app:onClickCommand="@{viewModel.homeClick}"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/rl_commodity"
+            app:layout_constraintEnd_toStartOf="@id/rl_task"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/gl_h_9">
 
@@ -47,29 +47,15 @@
 
 
         <RelativeLayout
-            android:id="@+id/rl_commodity"
+            android:id="@+id/rl_task"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@color/color_0661FF"
-            app:onClickCommand="@{viewModel.listClick}"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/rl_dynamic"
             app:layout_constraintStart_toEndOf="@id/rl_home"
-            app:layout_constraintTop_toBottomOf="@id/gl_h_9">
-
-        </RelativeLayout>
-
-
-        <RelativeLayout
-            android:id="@+id/rl_dynamic"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="@color/color_08FF00"
-            app:onClickCommand="@{viewModel.carClick}"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/rl_mine"
-            app:layout_constraintStart_toEndOf="@id/rl_commodity"
-            app:layout_constraintTop_toBottomOf="@id/gl_h_9">
+            app:layout_constraintTop_toBottomOf="@id/gl_h_9"
+            app:onClickCommand="@{viewModel.taskClick}">
 
         </RelativeLayout>
 
@@ -79,11 +65,11 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@color/color_3A3A3A"
-            app:onClickCommand="@{viewModel.mineClick}"
+            app:layout_constraintStart_toEndOf="@id/rl_task"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/rl_dynamic"
-            app:layout_constraintTop_toBottomOf="@id/gl_h_9">
+            app:layout_constraintTop_toBottomOf="@id/gl_h_9"
+            app:onClickCommand="@{viewModel.mineClick}">
 
         </RelativeLayout>
 
