--- a/game_task/src/main/res/layout/fragment_mine.xml
+++ b/game_task/src/main/res/layout/fragment_mine.xml
@@ -17,6 +17,59 @@
         tools:context="com.game_task.view.fragment.MineFragment">
 
 
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/gl_h_19"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            binding:layout_constraintGuide_percent="0.17" />
+
+
+        <ImageView
+            android:id="@+id/iv_set"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginRight="5dp"
+            binding:layout_constraintEnd_toEndOf="parent"
+            binding:layout_constraintTop_toTopOf="parent"
+            tools:ignore="ContentDescription" />
+
+
+        <ImageView
+            android:id="@+id/iv_head"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="25dp"
+            android:layout_marginBottom="25dp"
+            binding:layout_constraintBottom_toBottomOf="@id/gl_h_19"
+            binding:layout_constraintDimensionRatio="1:1"
+            binding:layout_constraintStart_toStartOf="parent"
+            binding:layout_constraintTop_toTopOf="parent"
+            tools:ignore="ContentDescription" />
+
+        <TextView
+            android:id="@+id/tv_name_hint"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="4dp"
+            android:text="昵称"
+            binding:layout_constraintStart_toEndOf="@id/iv_head"
+            binding:layout_constraintTop_toTopOf="@id/iv_head" />
+
+        <TextView
+            android:id="@+id/tv_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            binding:layout_constraintStart_toEndOf="@id/tv_name_hint"
+            binding:layout_constraintTop_toTopOf="@id/iv_head" />
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
