--- a/main/src/main/res/layout/activity_main.xml
+++ b/main/src/main/res/layout/activity_main.xml
@@ -16,77 +16,89 @@
         android:layout_height="match_parent"
         tools:context=".view.activity.MainActivity">
 
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/gl_h_9"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.9" />
 
-        <FrameLayout
-            android:id="@+id/fl_content"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/gl_h_9"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-        <RelativeLayout
-            android:id="@+id/rl_home"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="@color/color_FF4D4D"
-            app:onClickCommand="@{viewModel.homeClick}"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/rl_commodity"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/gl_h_9">
+            <FrameLayout
+                android:id="@+id/fl_content"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
 
-        </RelativeLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.1dp"
+                android:background="@color/colorGray" />
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorBackGround"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp">
 
-        <RelativeLayout
-            android:id="@+id/rl_commodity"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="@color/color_0661FF"
-            app:onClickCommand="@{viewModel.listClick}"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/rl_dynamic"
-            app:layout_constraintStart_toEndOf="@id/rl_home"
-            app:layout_constraintTop_toBottomOf="@id/gl_h_9">
+                <TextView
+                    android:id="@+id/tv_message"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:drawableTop="@drawable/ic_message"
+                    android:gravity="center_horizontal"
+                    android:text="@string/message"
+                    android:textSize="13sp"
+                    app:onClickCommand="@{viewModel.msgClick}"  />
 
-        </RelativeLayout>
-
-
-        <RelativeLayout
-            android:id="@+id/rl_dynamic"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="@color/color_08FF00"
-            app:onClickCommand="@{viewModel.carClick}"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/rl_mine"
-            app:layout_constraintStart_toEndOf="@id/rl_commodity"
-            app:layout_constraintTop_toBottomOf="@id/gl_h_9">
-
-        </RelativeLayout>
+                <TextView
+                    android:id="@+id/tv_task"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:drawableTop="@drawable/ic_task"
+                    android:gravity="center_horizontal"
+                    android:text="@string/task"
+                    android:textSize="13sp"
+                    app:onClickCommand="@{viewModel.taskClick}" />
 
 
-        <RelativeLayout
-            android:id="@+id/rl_mine"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="@color/color_3A3A3A"
-            app:onClickCommand="@{viewModel.mineClick}"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/rl_dynamic"
-            app:layout_constraintTop_toBottomOf="@id/gl_h_9">
+                <TextView
+                    android:id="@+id/tv_project"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:drawableTop="@drawable/ic_project"
+                    android:gravity="center_horizontal"
+                    android:text="@string/project"
+                    android:textSize="13sp"
+                    app:onClickCommand="@{viewModel.projectClick}"/>
 
-        </RelativeLayout>
+                <TextView
+                    android:id="@+id/tv_process"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:drawableTop="@drawable/ic_project"
+                    android:gravity="center_horizontal"
+                    android:text="@string/process"
+                    android:textSize="13sp"
+                    app:onClickCommand="@{viewModel.flowClick}" />
 
+                <TextView
+                    android:id="@+id/tv_my"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:drawableTop="@drawable/ic_project"
+                    android:gravity="center_horizontal"
+                    android:text="@string/my"
+                    android:textSize="13sp"
+                    app:onClickCommand="@{viewModel.mineClick}" />
+
+            </LinearLayout>
+
+        </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
